<resources>
    <string name="app_name">BAYERN VS PSG</string>
    <string name="league_name">CHAMPIONS LEAGUE</string>
    <string name="score_default">0</string>
    <string name="goals">GOLES</string>
    <string name="goals_by_penalties">GOLES POR PENALTI</string>
    <string name="fouls">FALTAS</string>
    <string name="yellow_cards">TARJETAS AMARILLAS</string>
    <string name="double_yellow_cards">TARJETAS AMARILLAS DOBLES</string>
    <string name="red_cars">TARJETAS ROJAS</string>
    <string name="Teamb_description">Logo Bayern</string>
    <string name="lineaString">-</string>
    <string name="psg_logo">PSG LOGO</string>
</resources>
